--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Score Keeper Baseball</string>
+    <string name="home">Home</string>
+    <string name="visit">Visitor</string>
+    <string name="runs">Runs</string>
+    <string name="run">Run</string>
+    <string name="outs">Outs</string>
+    <string name="out">Out</string>
+    <string name="slam">Grand Slam</string>
+    <string name="initial">0</string>
+    <string name="in">Inning</string>
 </resources>
