Add accessibility to image.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="slam">Grand Slam</string>
     <string name="initial">0</string>
     <string name="in">Inning</string>
+    <string name="image">Baseball</string>
 </resources>
