--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="initial">0</string>
     <string name="in">Inning</string>
     <string name="image">Baseball</string>
+    <string name="reset">Reset</string>
 </resources>
