--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="outs">Outs</string>
     <string name="out">Out</string>
     <string name="slam">Grand Slam</string>
-    <string name="initial">0</string>
-    <string name="initial_inning">1</string>
+    <string name="initial" translatable="false">0</string>
+    <string name="initial_inning" translatable="false">1</string>
     <string name="in">Inning</string>
     <string name="image">Baseball</string>
     <string name="reset">Reset</string>
