--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,9 +7,9 @@
     <string name="out">le Retrait</string>
     <string name="run">les Point</string>
     <string name="runs">les Points</string>
-    <string name="slam">" le Grand Chelem"</string>
-    <string name="image">" le Baseball"</string>
+    <string name="slam">le Grand Chelem</string>
+    <string name="image">le Baseball</string>
     <string name="outs">les Retraits</string>
     <string name="in">la Manche</string>
-    <string name="reset">"réinitialiser "</string>
+    <string name="reset">Réinitialiser</string>
 </resources>
