Move strings for toast messages to string resource files. Translate toast message strings to french and spanish.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -12,4 +12,6 @@
     <string name="slam">Grand Slam</string>
     <string name="image">Béisbol</string>
     <string name="reset">Reiniciar</string>
+    <string name="toasthome">¡El Equipo Local Gana!</string>
+    <string name="toastvisitor">¡El Equipo Visitante Gana!</string>
 </resources>
