--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="in">Inning</string>
     <string name="image">Baseball</string>
     <string name="reset">Reset</string>
+    <string name="toasthome">Home Team Wins!</string>
+    <string name="toastvisitor">Visiting Team Wins!</string>
 </resources>
