Resolve lint warnings for Team class. Update class comment. Make final variables static. Update variables to reflect naming conventions. Add utf code to each relevant xml file.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,7 @@
     <string name="visit">Visitante</string>
     <string name="home">Local</string>
     <string name="outs">" Fuera"</string>
-    <string name="runs">los Carreras</string>
+    <string name="mRuns">los Carreras</string>
     <string name="in">Episodio</string>
     <string name="run">una Carrera</string>
     <string name="out">los Fueras</string>
