--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,7 +6,7 @@
     <string name="visit">Visiteurs</string>
     <string name="out">le Retrait</string>
     <string name="run">les Point</string>
-    <string name="runs">les Points</string>
+    <string name="mRuns">les Points</string>
     <string name="slam">le Grand Chelem</string>
     <string name="image">le Baseball</string>
     <string name="outs">les Retraits</string>
