--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Score Keeper Baseball</string>
     <string name="home">Home</string>
     <string name="visit">Visitor</string>
-    <string name="runs">Runs</string>
+    <string name="mRuns">Runs</string>
     <string name="run">Run</string>
     <string name="outs">Outs</string>
     <string name="out">Out</string>
