Refine logic to handle extra innings. Refine logic to handle special seven inning game.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="reset">Reset</string>
     <string name="toasthome">Home Team Wins!</string>
     <string name="toastvisitor">Visiting Team Wins!</string>
+    <string name="spec">7 Inning Game</string>
 </resources>
